fix signup eature layout issue

--- a/style.css
+++ b/style.css
@@ -137,11 +137,11 @@ header {
   width: 100px;
   height: 30px;
   padding: 2px;
-  position: relative;
 
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: 4rem;
 }
 .action {
   width: 850px;
@@ -150,11 +150,14 @@ header {
   margin: 2rem auto;
   color: white;
   padding: 2rem;
-  display: flex;
-  justify-content: space-between;
   border-radius: 5px;
+  display: flex;
+  justify-content: space-around;
 }
 .action-info h4 {
   letter-spacing: 1px;
   margin: 1rem 0;
+}
+.action-info {
+  flex: 1;
 }
